--- a/AutoMall/ViewControllers/Mall/CommodityDetailTapCell.xib
+++ b/AutoMall/ViewControllers/Mall/CommodityDetailTapCell.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CommodityDetailTapCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commodityDetailTapCell" id="KGk-i7-Jjw" customClass="CommodityDetailTapCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kpB-d4-oUP">
@@ -42,6 +42,10 @@
                     <constraint firstItem="kpB-d4-oUP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="t1h-fA-Ov1"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="hobbyScrollView" destination="sow-Az-C4L" id="jHu-8r-H8b"/>
+            </connections>
+            <point key="canvasLocation" x="-239" y="10"/>
         </tableViewCell>
     </objects>
 </document>
